# porkbun-ddns

./: .gitignore  AGENTS.md  CHANGELOG.MD  LICENSE  README.md  config.json.example  porkbun_ddns.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml  platforms.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: auto-merge-dependabot.yml  auto-release.yml  docker-rebuild.yml  docker.yml  feedback-label.yml  lint_and_test.yml  publish.yml  pypi.yml
Docker/: Dockerfile  docker-compose.yml  entrypoint.py
Docker/test/: test.sh
Docker/test/integration/: inspec.yml
Docker/test/integration/assets/: entrypoint.py
Docker/test/integration/controls/: porkbun-ddns.rb
porkbun_ddns/: __init__.py  cli.py  config.py  errors.py  helpers.py  porkbun_ddns.py
porkbun_ddns/test/: test_config.py  test_porkbun_ddns.py
