[project]
name = "porkbun_ddns"
dynamic = ["version"]
requires-python = ">=3.11"
description = "A unofficial DDNS-Client for Porkbun domains"
readme = "README.md"
authors = [{ name = "Nils Stein", email = "github.nstein@mailbox.org" }]
license = { file = "LICENSE" }
classifiers = [
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    "Operating System :: OS Independent",
]
keywords = ["porkbun", "ddns"]
dependencies = ["xdg-base-dirs~=6.0.2"]

[project.urls]
repository = "https://github.com/mietzen/porkbun-ddns"

[project.scripts]
porkbun_ddns = "porkbun_ddns.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["porkbun_ddns"]
